2008-10-27  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* gst/flv/gstflvparse.c: (gst_flv_parse_tag_audio),
	(gst_flv_parse_tag_video):
	If the caps change during playback and negotiation fails error out
	instead of trying to continue.

2008-10-27  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* gst/flv/gstflvmux.c: (gst_flv_mux_audio_pad_setcaps),
	(gst_flv_mux_request_new_pad), (gst_flv_mux_write_buffer),
	(gst_flv_mux_collected):
	* gst/flv/gstflvmux.h:
	* gst/flv/gstflvparse.c: (gst_flv_parse_audio_negotiate):
	Add support for Speex audio and allow buffers without valid
	timestamp in the muxer.

2008-10-27  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* gst/flv/gstflvdemux.c: (gst_flv_demux_loop),
	(gst_flv_demux_find_offset), (gst_flv_demux_handle_seek_push),
	(gst_flv_demux_handle_seek_pull):
	Don't post an error message on the bus if sending EOS downstream
	didn't work. Fixes bug #550454.

	Fix seek event handling to look at the flags of the seek event
	instead of assuming some random flags, don't send segment-start
	messages when operating in push mode and push seek events upstream
	if we couldn't handle them.

2008-10-27  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* gst/flv/gstflvdemux.c: (gst_flv_demux_pull_tag):
	Error out early if pulling a tag failed.

2008-10-27  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* gst/flv/gstflvdemux.c: (gst_flv_demux_create_index),
	(gst_flv_demux_loop):
	* gst/flv/gstflvparse.c: (gst_flv_parse_tag_script),
	(gst_flv_parse_tag_audio), (gst_flv_parse_tag_video),
	(gst_flv_parse_tag_timestamp):
	* gst/flv/gstflvparse.h:
	In pull mode we create our own index before doing anything else
	and don't use the index provided by some files (which are more than
	often incorrect and cause failed seeks).

	For push mode we still use the index provided by the file and extend it
	while doing the playback.

2008-10-27  Sebastian Dröge  <sebastian.droege@collabora.co.uk>
